Fix updates not showing on GitHub

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3395,6 +3395,15 @@ nav a {
 }
 
 
+
+
+@media (max-width: 768px) {
+  .social-icons {
+    display: flex;
+  }
+}
+
+
  
 
 
